--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,5 +1,7 @@
+@import 'fonts.scss';
 @import 'mixin.scss';
 
 @import 'common.scss';
 
 @import 'main-header.scss';
+@import 'main-services.scss';
