--- a/app/sass/main-header.scss
+++ b/app/sass/main-header.scss
@@ -1,8 +1,7 @@
 .main-header
 {
     background-color: #3b434c;
-    background-image: linear-gradient( 0deg, rgba(0,0,0,.5) 0%, rgba(0,0,0,.4) 5%, rgba(0,0,0,.3) 25%, rgba(0,0,0,0) 100%),
-    url(../img/header_background.jpg);
+    background-image: $background-gradient, url(../img/header_background.jpg);
     background-repeat: no-repeat, no-repeat;
     background-position: 0 0, top center;
     background-size: auto, cover;
