Продолжаем метить разметк

--- a/app/sass/contacts.scss
+++ b/app/sass/contacts.scss
@@ -54,8 +54,8 @@
       background-color: #d9ddc9;
       background: url(../img/map.jpg) no-repeat center center;
       background-size: cover;
-      width: 850px;
-      height: 400px;
+      width: 100%;
+      height: 550px;
       border-radius: 10px;
     }
 }
