--- a/app/sass/contacts.scss
+++ b/app/sass/contacts.scss
@@ -42,7 +42,7 @@
     &__address-paragraph {
       font-size: 16px;
       line-height: 30px;
-      color: #fff;
+      color: $color-light;
       text-align: center;
       font-weight: 400;
       font-style: normal;
