--- a/app/sass/our-works.scss
+++ b/app/sass/our-works.scss
@@ -5,7 +5,7 @@
 
     // padding-top: 150px;
 
-    background-color: #fff;
+    background-color: $color-light;
 
     &__wrapper
     {
@@ -55,23 +55,30 @@
       margin-left: 15px;
       margin-right: 15px;
       margin-bottom: 30px;
-      background-color: blue;
+      background-color: gray;
       background: no-repeat center center;
       background-size: cover;
       border-radius: 10px;
     }
 
-    &__item:hover::before
+    &__item--hover
     {
-      content: '';
+      position: absolute;
+      box-sizing: border-box;
       width: 350px;
       height: 350px;
-      position: absolute;
+      padding: 20px;
       top: 0;
       left: 0;
-      background-color: $color-highlight;
-      opacity: .85;
+      background-color: rgba(247, 96, 14, 0);
       border-radius: 10px;
+      opacity: 0;
+    }
+
+    &__item--hover:hover
+    {
+      background-color: rgba(247, 96, 14, .85);
+      opacity: 1;
     }
 
     &__item1
@@ -108,10 +115,37 @@
     {
       text-align: center;
       margin-top: 60px;
-      color: #fff;
+      color: $color-light;
       text-transform: uppercase;
-      font-weight: bold;
-      font-size: 28px;
+      font-weight: normal;
+      font-size: 30px;
     }
 
+    &__item-description
+    {
+      text-align: center;
+      color: $color-light;
+      font-size: 15px;
+      line-height: 25px;
+    }
+
+    &__item-link
+    {
+      display: block;
+      color: $color-highlight;
+      text-align: center;
+      text-decoration: none;
+      text-transform: uppercase;
+      font-weight: normal;
+
+      margin: 30px auto 0;
+      padding: 10px;
+
+      box-sizing: border-box;
+      width: 200px;
+      height: 45px;
+      border: 1px solid $color-light;
+      border-radius: 10px;
+      background-color: $color-light;
+    }
 }
