Секция отзывов стилизована

--- a/app/sass/contacts.scss
+++ b/app/sass/contacts.scss
@@ -3,7 +3,7 @@
     padding-top: 100px;
     padding-bottom: 50px;
 
-    background-color: #3b434c;
+    background-color: $color-gray;
     background-image: $background-gradient, url(../img/contacts_background.jpg);
     background-repeat: no-repeat, no-repeat;
     background-position: 0 0, bottom center;
