--- a/app/sass/our-team.scss
+++ b/app/sass/our-team.scss
@@ -10,6 +10,7 @@
     &__wrapper
     {
         @include wrapper();
+        max-width: 1300px;
     }
 
     &__header
@@ -29,4 +30,94 @@
           color: $color-highlight;
         }
     }
+
+    &__description
+    {
+      font-size: 16px;
+      line-height: 30px;
+      max-width: 500px;
+      margin: 0 auto;
+      color: $color-darkfont;
+      text-align: center;
+      font-weight: 400;
+      font-style: normal;
+    }
+
+    &__items-list
+    {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding-top: 80px;
+    }
+
+    &__item
+    {
+      width: 280px;
+      padding: 30px 10px 10px;
+      filter: grayscale(100%);
+    }
+
+    &__item:hover
+    {
+      filter: grayscale(0);
+      padding-top: 10px;
+    }
+
+    &__item-pic
+    {
+      display: block;
+      width: 220px;
+      height: 240px;
+      margin: 0 auto 15px;
+      border-radius: 8px;
+    }
+
+    &__item:hover &__item-pic
+    {
+      width: 240px;
+      height: 260px;
+      border-bottom-left-radius: 2px;
+      border-bottom-right-radius: 2px;
+      border-bottom: 4px solid $color-highlight;
+      box-sizing: border-box;
+    }
+
+    &__item-header
+    {
+      font-family: $font-family;
+      font-size: 24px;
+      font-weight: 600;
+      font-style: normal;
+      line-height: 40px;
+
+      text-align: center;
+      text-transform: uppercase;
+
+      color: gray;
+    }
+
+    &__item:hover &__item-header
+    {
+      color: $color-darkfont;
+    }
+
+    &__item-description
+    {
+      font-family: $font-family;
+      font-size: 16px;
+      font-weight: 400;
+      font-style: normal;
+      line-height: 30px;
+
+      text-align: center;
+
+      color: gray;
+    }
+
+    &__item:hover &__item-description
+    {
+      color: $color-darkfont;
+    }
+
 }
