--- a/sass/say-hello.scss
+++ b/sass/say-hello.scss
@@ -1,12 +1,19 @@
 .say-hello
 {
-    margin: 0 auto;
-    padding: 100px 15px;
+  min-height: 350px;
 
-    // padding-top: 150px;
+  margin: 0 auto;
 
-    background-color: $color-light;
+  padding-top: 100px;
+  padding-bottom: 50px;
+  padding-left: 0;
+  padding-right: 0;
 
+  background-color: $color-gray;
+  background-image: linear-gradient( 0deg, rgba(49,55,61,1) 0%, rgba(49,55,61,.95) 5%, rgba(49,55,61,.9) 25%, rgba(49,55,61,0.85) 100%), url(../img/contact_bg.png);
+  background-repeat: no-repeat, no-repeat;
+  background-position: 0 0, bottom center;
+  background-size: auto, cover;
     &__wrapper
     {
         @include wrapper();
@@ -25,6 +32,8 @@
         text-align: center;
         text-transform: uppercase;
 
+        color: $color-light;
+
         &--highlighted
         {
           color: $color-highlight;
@@ -37,10 +46,22 @@
       line-height: 30px;
       max-width: 500px;
       margin: 0 auto;
-      color: $color-darkfont;
+      color: $color-light;
       text-align: center;
       font-weight: 400;
       font-style: normal;
+      padding-bottom: 100px;
+    }
+
+    &__form
+    {
+      max-width: 700px;
+      margin: 0 auto;
+      font-size: 16px;
+      line-height: 30px;
+      font-weight: 400;
+      font-style: normal;
+      outline: 1px solid black;
     }
 
 }
