--- a/sass/our-works.scss
+++ b/sass/our-works.scss
@@ -37,6 +37,8 @@
       text-align: center;
       font-weight: 400;
       font-style: normal;
+
+      text-shadow: $shadow-gray;
     }
 
     &__items-list
