--- a/sass/common.scss
+++ b/sass/common.scss
@@ -1,11 +1,16 @@
 $font-family: 'OpenSans', sans-serif;
 
 $color-highlight: #f7600e;
-$color-darkfont: #3b434c;
+$color-darkfont: #373737;
 $color-light: #fff;
 $color-gray: #3b434c;
 
-$background-gradient: linear-gradient( 0deg, rgba(0,0,0,.5) 0%, rgba(0,0,0,.4) 5%, rgba(0,0,0,.3) 25%, rgba(0,0,0,0) 100%);
+$shadow-white: rgba(255,255,255,.4) 1px 0 10px;
+$shadow-orange: rgba(247,96,14,.3) 1px 0 10px;
+$shadow-gray: rgba(101,101,101,.4) 1px 0 10px;
+
+$background-gradient: linear-gradient( 0deg, rgba(49,55,61,1) 0%, rgba(49,55,61,.95) 5%, rgba(49,55,61,.9) 25%, rgba(49,55,61,0.85) 100%);
+
 
 body,
 html
@@ -16,6 +21,7 @@ html
     font-family: $font-family;
     font-size: 16px;
     font-weight: 400;
+    min-width: 500px;
 }
 
 /* Чтобы не было изображение больше контейнера*/
