--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -4,7 +4,7 @@
     padding-bottom: 50px;
 
     background-color: $color-gray;
-    background-image: $background-gradient, url(../img/contacts_background.jpg);
+    background-image: $background-gradient, url(../img/sybscribe.png);
     background-repeat: no-repeat, no-repeat;
     background-position: 0 0, bottom center;
     background-size: auto, cover;
@@ -47,7 +47,7 @@
       text-align: center;
       font-weight: 400;
       font-style: normal;
-      // margin-bottom: 50px;
+       margin-bottom: 50px;
     }
 
     &__map {
