--- a/sass/main-services.scss
+++ b/sass/main-services.scss
@@ -13,7 +13,7 @@
         margin: 0 auto;
 
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: center;
     }
 
     &__service-item
@@ -22,6 +22,7 @@
         min-width: 150px;
         max-width: 300px;
         padding-top: 250px;
+        margin: 0 20px 0;
 
         position: relative;
     }
