--- a/sass/our-team.scss
+++ b/sass/our-team.scss
@@ -41,6 +41,8 @@
       text-align: center;
       font-weight: 400;
       font-style: normal;
+
+      text-shadow: $shadow-gray;
     }
 
     &__items-list
