--- a/sass/say-hello.scss
+++ b/sass/say-hello.scss
@@ -10,7 +10,7 @@
   padding-right: 0;
 
   background-color: $color-gray;
-  background-image: linear-gradient( 0deg, rgba(49,55,61,1) 0%, rgba(49,55,61,.95) 5%, rgba(49,55,61,.9) 25%, rgba(49,55,61,0.85) 100%), url(../img/contact_bg.png);
+  background-image: $background-gradient, url(../img/contact_bg.png);
   background-repeat: no-repeat, no-repeat;
   background-position: 0 0, bottom center;
   background-size: auto, cover;
@@ -50,7 +50,8 @@
       text-align: center;
       font-weight: 400;
       font-style: normal;
-      padding-bottom: 100px;
+      padding-bottom: 50px;
+      text-shadow: $shadow-white;
     }
 
     &__form
@@ -61,7 +62,99 @@
       line-height: 30px;
       font-weight: 400;
       font-style: normal;
-      outline: 1px solid black;
+      padding: 15px;
+    }
+
+    &__input
+    {
+      font-family: $font-family;
+      font-size: 12px;
+      font-weight: 600;
+
+      display: inline-block;
+
+      min-width: 210px;
+      margin: 0 0 15px 0;
+      padding: 12px 15px;
+      width: calc(50% - 10px);
+
+      box-sizing: border-box;
+
+      text-align: left;
+      text-decoration: none;
+
+      color: $color-darkfont;
+      border: 1px solid #65696e;
+      border-radius: 10px;
+
+      border-color: transparent;
+      background-color: $color-light;
+    }
+
+    &__input:nth-child(2n+1)
+    {
+      margin-right: 15px;
+    }
+
+    &__input:nth-child(2n)
+    {
+      margin-right: 0;
+    }
+
+    &__area
+    {
+      font-family: $font-family;
+      font-size: 12px;
+      font-weight: 600;
+
+      display: block;
+
+      min-width: 210px;
+      margin: 0 0 15px;;
+      padding: 12px 15px;
+      width: 100%;
+
+      box-sizing: border-box;
+
+      text-align: left;
+      text-decoration: none;
+
+      color: $color-darkfont;
+      border: 1px solid #65696e;
+      border-radius: 10px;
+
+      border-color: transparent;
+      background-color: $color-light;
+    }
+
+    &__submit
+    {
+      font-family: $font-family;
+      font-size: 14px;
+      font-weight: 600;
+
+      display: block;
+
+      width: 100%;
+      margin: auto 15px 15px 0;
+      padding: 12px 15px;
+
+      text-align: center;
+      text-decoration: none;
+      text-transform: uppercase;
+
+      color: $color-light;
+      border: 1px solid #65696e;
+      border-radius: 10px;
+
+      border-color: transparent;
+      background-color: $color-highlight;
+    }
+
+    &__submit:hover,
+    &__submit:focus
+    {
+        cursor: pointer;
     }
 
 }
